Fixed right textbox border being cut off in Chromium browsers since version v83. (RM-7446)

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocAutoCompleteReferenceValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocAutoCompleteReferenceValue.css
@@ -332,3 +332,9 @@ span.bocAutoCompleteReferenceValueInput input
   height: 1.2em;
   line-height: 1em;
 }
+
+.blink span.bocAutoCompleteReferenceValue input
+{
+  padding-left: 1px;
+  padding-right: 1px;
+}
